--- a/src/app/components/small-post/small-post.component.html
+++ b/src/app/components/small-post/small-post.component.html
@@ -1,1 +1,9 @@
-<p>small-post works!</p>
+<div class="smallpost__container">
+  <div class="smallpost__image">
+    <img src="https://picsum.photos/400/300" alt="image" />
+  </div>
+  <div class="smallpost__title">
+    <a href="#">
+      <h2 title="">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa, ab.</h2>
+    </a>
+  </div>
