display home page
display home page component in the root app

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,2 @@
-<app-menu-bar></app-menu-bar>
-<app-blog-title></app-blog-title>
-<app-big-post></app-big-post>
-<app-small-post></app-small-post>
+<app-home></app-home>
 <router-outlet></router-outlet>
