--- a/src/styles.css
+++ b/src/styles.css
@@ -24,3 +24,13 @@
 }
 
 /*  Global styles */
+
+::-moz-selection {
+  color: white;
+  background: red;
+}
+
+::selection {
+  color: white;
+  background: red;
+}
