--- a/src/app/components/big-post/big-post.component.html
+++ b/src/app/components/big-post/big-post.component.html
@@ -1,17 +1,16 @@
 <div class="bigpost__container">
   <div class="bigpost__image">
-    <img src="https://picsum.photos/400/300" alt="image" />
+    <img src="{{postCover}}" alt="image" />
   </div>
   <div class="bigpost__title">
     <a href="#">
-      <h2>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa, ab.</h2>
+      <h2>{{postTitle}}</h2>
     </a>
   </div>
   <div class="bigpost__content">
     <p>
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique, totam! Autem totam est deserunt provident
-      harum
-      accusamus voluptate quo facere, labore, ea excepturi officia quidem?
+      {{postDescription}}
+
     </p>
   </div>
 </div>
