--- a/src/app/components/small-post/small-post.component.css
+++ b/src/app/components/small-post/small-post.component.css
@@ -7,7 +7,7 @@
 .smallpost__image img {
   width: 100%;
   height: 100%;
-  max-height: 16rem;
+  max-height: 8rem;
   min-width: 12rem;
   object-fit: fill;
   filter: saturate(0);
@@ -18,8 +18,8 @@
   transition: all 1s ease-in-out;
 }
 
-.smallpost__title {
-  font-size: 1rem;
+.smallpost__title h3 {
+  font-size: clamp(1.2rem, 1.5vw, 1.5rem);
   font-weight: 500;
   margin-left: 1rem;
   max-width: 100%;
