add id propoerty to smallpost

--- a/src/app/components/small-post/small-post.component.html
+++ b/src/app/components/small-post/small-post.component.html
@@ -4,7 +4,7 @@
     <img src="{{postCover}}" alt="image" />
   </div>
   <div class="smallpost__title">
-    <a href="#">
+    <a [routerLink]="['content', Id]">
       <h3>{{postTitle}}</h3>
     </a>
   </div>
