--- a/src/app/components/small-post/small-post.component.css
+++ b/src/app/components/small-post/small-post.component.css
@@ -5,11 +5,12 @@
 }
 
 .smallpost__image img {
-  width: 100%;
+  width: 100vw;
+  max-width: 12rem;
+  flex: 1;
   height: 100%;
-  max-height: 8rem;
-  min-width: 12rem;
-  object-fit: fill;
+  height: 8rem;
+  object-fit: cover;
   filter: saturate(0);
 }
 
