--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -23,10 +23,21 @@ section.posts__container {
   max-width: 100vw;
   flex: 1;
   margin-left: 0.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
 .smallpost__container + .smallpost__container {
   margin-top: 0.75rem;
+}
+
+.smallpost__container h2 {
+  font-size: 1rem;
+  font-weight: 500;
+  margin: 0.5rem 0;
+  max-width: 100%;
+  width: 100%;
 }
 
 @media (max-width: 768px) {
@@ -47,6 +58,7 @@ section.posts__container {
 
   .smallposts__container {
     margin: 0;
+    width: 100%;
   }
 
   .smallpost__container + .smallpost__container {
