--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -1,7 +1,7 @@
 <header class="header__container">
   <nav class="navbar__container">
     <ul>
-      <li><a href="#">Home</a></li>
+      <li><a [routerLink]="['']">Home</a></li>
       <li><a href="#">About</a></li>
       <li><a href="#">Contact</a></li>
     </ul>
